--- a/notebooks/featurestore/Snowflake/pythonChurnCreateFeaturegroups.ipynb
+++ b/notebooks/featurestore/Snowflake/pythonChurnCreateFeaturegroups.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connector = featurestore.get_storage_connector(\"snowflake_spark_connector\",featurestore=featurestore.project_featurestore())"
+    "db_pass = featurestore.get_storage_connector(\"snowflake_spark_connector\",featurestore=featurestore.project_featurestore()).arguments"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "source": [
     "ctx = snowflake.connector.connect(\n",
     "  user='HOPSWORKS',\n",
-    "  password=connector.connection_arguments,\n",
+    "  password=db_pass,\n",
     "  account='ra96958.eu-central-1',\n",
     "  warehouse='HOPSWORKS_WH',\n",
     "  database='ML_WORKSHOP',\n",
@@ -325,7 +325,17 @@
    ],
    "source": [
     "from hops import featurestore\n",
-    "featurestore.create_featuregroup(telcom, \"telcom_featuregroup\", description=\"Telecom churn prediction feature group\", online=True)"
+    "\n",
+    "featurestore.create_featuregroup(\n",
+    "    telcom,\n",
+    "    \"telcom_featuregroup\",\n",
+    "    description=\"Telecom churn prediction feature group\", \n",
+    "    online=True,\n",
+    "    descriptive_statistics=True,\n",
+    "    feature_correlation=True,\n",
+    "    feature_histograms=True,\n",
+    "    cluster_analysis=True\n",
+    ")"
    ]
   },
   {
