cleanup for review

--- a/notebooks/featurestore/aws/redshift/churn/Get_Started_Setup.ipynb
+++ b/notebooks/featurestore/aws/redshift/churn/Get_Started_Setup.ipynb
@@ -266,27 +266,27 @@
     "\n",
     "<code>\n",
     "    CREATE TABLE telcom (\n",
-    "        customer_id VARCHAR primary key \n",
-    "        gender VARCHAR,   \n",
-    "        senior_citizen VARCHAR, \n",
-    "        partner VARCHAR,\n",
-    "        dependents VARCHAR,  \n",
+    "        customer_id VARCHAR (50) primary key \n",
+    "        gender VARCHAR (10),   \n",
+    "        senior_citizen VARCHAR (50), \n",
+    "        partner VARCHAR (50),\n",
+    "        dependents VARCHAR (50),  \n",
     "        tenure INTEGER, \n",
-    "        phone_service VARCHAR,      \n",
-    "        multiple_lines VARCHAR, \n",
-    "        internet_service VARCHAR, \n",
-    "        online_security VARCHAR, \n",
-    "        online_backup VARCHAR, \n",
-    "        device_protection VARCHAR, \n",
-    "        tech_support VARCHAR, \n",
-    "        streaming_tv VARCHAR,\n",
-    "        streaming_movies VARCHAR,        \n",
-    "        contract VARCHAR,\n",
-    "        paperless_billing VARCHAR,            \n",
+    "        phone_service VARCHAR (50),      \n",
+    "        multiple_lines VARCHAR (50), \n",
+    "        internet_service VARCHAR (50), \n",
+    "        online_security VARCHAR (50), \n",
+    "        online_backup VARCHAR (50), \n",
+    "        device_protection VARCHAR (50), \n",
+    "        tech_support VARCHAR (50), \n",
+    "        streaming_tv VARCHAR (50),\n",
+    "        streaming_movies VARCHAR (50),        \n",
+    "        contract VARCHAR (50),\n",
+    "        paperless_billing VARCHAR (50),            \n",
     "        payment_method INTEGER, \n",
     "        monthly_charges INTEGER, \n",
     "        total_charges INTEGER, \n",
-    "        churn VARCHAR    \n",
+    "        churn VARCHAR (10)    \n",
     "    );\n",
     "</code>\n",
     "\n",
