update notebooks and tour

--- a/notebooks/featurestore/hsfs/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/feature_engineering.ipynb
@@ -13,6 +13,7 @@
     "- [Feature Exploration](./feature_exploration.ipynb): Discover how to join features from different feature groups\n",
     "- [Training datasets](./training_datasets.ipynb): Discover how to save training datasets to be used by ML models\n",
     "\n",
+    "The data required to run this tour is located in a zip file called `archive.zip` in the same directory as the notebooks. Head to the Dataset browser on Hopsworks and unzip it.\n",
     "\n",
     "## Features and Feature Groups\n",
     "\n",
@@ -55,7 +56,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>40</td><td>application_1596722804871_0041</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1596722804871_0041/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks2.logicalclocks.com:8042/node/containerlogs/container_e01_1596722804871_0041_01_000001/retail__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>13</td><td>application_1602776478999_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1602776478999_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1602776478999_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -107,19 +108,19 @@
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/retail/RawData/archive/stores data-set.csv\")\n",
+    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/stores data-set.csv\")\n",
     "\n",
     "exogenous_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/retail/RawData/archive/Features data set.csv\")\n",
+    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/Features data set.csv\")\n",
     "\n",
     "sales_csv = spark.read\\\n",
     "             .option(\"inferSchema\", \"true\")\\\n",
     "             .option(\"header\", \"true\")\\\n",
     "             .format(\"csv\")\\\n",
-    "             .load(\"hdfs:///Projects/retail/RawData/archive/sales data-set.csv\")"
+    "             .load(\"hdfs:///Projects/demo_fs_meb10000/Jupyter/hsfs/archive/sales data-set.csv\")"
    ]
   },
   {
@@ -185,14 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "store_fg_meta = fs.create_feature_group(name=\"store_fg\",\n",
-    "                                       version=6,\n",
+    "                                       version=1,\n",
     "                                       primary_key=['store'],\n",
-    "                                       description=\"Store related features\")"
+    "                                       description=\"Store related features\",\n",
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})"
    ]
   },
   {
@@ -204,36 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f4ddbdc82b0>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4ad8b90>"
      ]
     }
    ],
    "source": [
     "store_fg_meta.save(stores_fg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame[store: int, type: string, size: int, num_depts: bigint]"
-     ]
-    }
-   ],
-   "source": [
-    "stores_fg.persist()"
    ]
   },
   {
@@ -245,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,21 +275,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "sales_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
     "                                        version=1,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
-    "                                        description=\"Sales related features\")"
+    "                                        description=\"Sales related features\",\n",
+    "                                        statistics_config=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b0cbd0>"
+     ]
+    }
+   ],
    "source": [
     "sales_fg_meta.save(sales_fg)"
    ]
@@ -318,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f91a689d860>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40850>"
      ]
     }
    ],
@@ -333,7 +327,8 @@
     "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
     "                                        version=2,\n",
     "                                        partition_key=['store'],\n",
-    "                                        description=\"Sales related features\")\n",
+    "                                        description=\"Sales related features\",\n",
+    "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
   },
@@ -343,29 +338,31 @@
    "source": [
     "You can enable a feature group to be online by setting the `online_enabled` flag to true. \n",
     "\n",
-    "By default `HSFS` configures the feature group such as new feature data that gets saved or inserted is written in the offline feature store. We can modify this behavior by setting the default_storage parameter in the `create_feature_group` method. Valid values are: `offline`, `online`, `all`. Please note that `all` allow you to write both on the offline and online feature store, the write is not transactional, meaning that an application can fail to write in one of the two storages."
+    "By default `HSFS` configures the feature group such that new feature data that gets saved or inserted is written to the offline feature store. If `online_enabled=True`, additionally, the data is saved to the online storage of the feature store. Note that the insert and save to both storages is not transactional.\n",
+    "\n",
+    "If you want to create a purely online feature group. Save the feature group with `online_enabled=True` but with an empty dataframe and subsequently use the insert with `storage=\"online\"` to overwrite the default and write to the online feature store only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f912d0b6a58>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b68150>"
      ]
     }
    ],
    "source": [
     "sales_part_fg_meta = fs.create_feature_group(name=\"sales_fg\",\n",
-    "                                        version=4,\n",
+    "                                        version=3,\n",
     "                                        primary_key=['store', 'dept', 'date'],\n",
     "                                        online_enabled=True,\n",
-    "                                        default_storage='all',\n",
-    "                                        description=\"Sales related features\")\n",
+    "                                        description=\"Sales related features\",\n",
+    "                                        statistics_config=False)\n",
     "sales_part_fg_meta.save(sales_fg)"
    ]
   },
@@ -381,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f2022571780>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4d40690>"
      ]
     }
    ],
@@ -396,9 +393,10 @@
     "exogenous_fg = exogenous_csv.withColumn('date', F.to_date(\"date\", 'dd/MM/yyy'))\n",
     "\n",
     "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
-    "                                        version=1,\n",
-    "                                        primary_key=['store', 'date'],\n",
-    "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\")\n",
+    "                                            version=1,\n",
+    "                                            primary_key=['store', 'date'],\n",
+    "                                            description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
@@ -413,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,12 +420,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 1)\n",
     "exogenous_fg_meta.insert(exogenous_fg_2013)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will also recompute statistics after inserting new data. The new statistics will be saved along the metadata with a new commit time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Append an additional feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Appending features to a feature group is a non-breaking schema change compared to removing features, which will require creating a new version of the feature group.\n",
+    "\n",
+    "You can append a feature group by specifying a data type and default value for the new feature. The default value is necessary for the data that is already in the feature group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hsfs.feature import Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b09ed0>"
+     ]
+    }
+   ],
+   "source": [
+    "exogenous_fg_meta.append_features([Feature(\"appended_feature\", type=\"double\", default_value=\"10.0\")])"
    ]
   },
   {
@@ -441,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -472,8 +519,7 @@
    ],
    "source": [
     "sales_fg = fs.get_feature_group('sales_fg', 1)\n",
-    "print(sales_fg.get_tag())\n",
-    "print"
+    "print(sales_fg.get_tag())"
    ]
   },
   {
@@ -487,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f1fa8d52c50>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fd3e4b6a410>"
      ]
     }
    ],
@@ -502,19 +548,27 @@
     "exogenous_fg_meta = fs.create_feature_group(name=\"exogenous_fg\",\n",
     "                                        version=2,\n",
     "                                        primary_key=['store', 'date'],\n",
-    "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\")\n",
+    "                                        description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
+    "                                        statistics_config=False)\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "exogenous_fg_meta = fs.get_feature_group('exogenous_fg', 2)\n",
     "exogenous_fg_meta.delete()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
