--- a/notebooks/featurestore/hsfs/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/training_datasets.ipynb
@@ -401,8 +401,8 @@
    "source": [
     "td = fs.get_training_dataset(\"sales_model\", 3)\n",
     "\n",
-    "train_input_feeder = td.feed(target_name='weekly_sales',split='train', is_training=True)\n",
-    "train_input = train_input_feeder.tf_record_dataset()"
+    "train_input_feeder = td.tf_data(target_name='weekly_sales',split='train', is_training=True)\n",
+    "train_input = train_input_feeder.tf_csv_dataset()"
    ]
   },
   {
@@ -415,18 +415,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
