time travel python

--- a/notebooks/featurestore/hsfs/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel_scala.ipynb
@@ -1078,9 +1078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "economyFg.insert(economyUpsertDf)\n",
-    "demographyFg.insert(demographicUpsertDf)\n",
-    "classFg.insert(classUpsertDf)"
+    "economyFg.insert(economyUpsertDf)"
    ]
   },
   {
@@ -1089,9 +1087,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val economyFg = fs.getFeatureGroup(\"economy_fg\",1)\n",
-    "val demographyFg = fs.getFeatureGroup(\"demography_fg\",1)\n",
-    "val classFg  = fs.getFeatureGroup(\"class_fg\",1)"
+    "demographyFg.insert(demographicUpsertDf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classFg.insert(classUpsertDf)"
    ]
   },
   {
